# for-yt

./: Dockerfile  LICENSE  README.md  app.py  output.srt  pyproject.toml  requirements.txt  srt_formatter.py  utils.py  youtube_captioner.py
templates/: index.html
